@@ -3,6 +3,7 @@ v 6.7.0
   - Add edit file button to MergeRequest diff
   - Public groups (Jason Hollingsworth)
   - Cleaner headers in Notification Emails (Pierre de La Morinerie)
+  - Add support for relative submodules
 
 v 6.6.2
   - Fix 500 error on branch/tag create or remove via UI
